[fix:  #149] Add a truncate class for table cells

--- a/src/core/layout/_tables.scss
+++ b/src/core/layout/_tables.scss
@@ -156,3 +156,14 @@ table {
 .table--hoverCell {
   tbody td:hover { background-color: getColor(background, light); }
 }
+
+// Truncate table
+.table--truncate {
+  table-layout: fixed;
+
+  td {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+}
